feat: Major refactoring and enhancements to WiFi Positioning Service
Core Features & Architecture:
- Add comprehensive multi-stage filtering pipeline with WifiAccessPoints
- Implement cell tower-based filtering for geographic outlier detection
- Add Local Outlier Factor (LOF) algorithm for statistical outlier detection
- Implement async non-blocking data retrieval using CompletableFuture
- Add detailed calculation info with algorithm selection reasoning

New Components:
- Add WifiAccessPoints DTO with filtering pipeline builder pattern
- Add CellTower and CellInfo DTOs for cell tower integration
- Add CellTowerRepository and CellTowerRepositoryImpl for cell tower data access
- Add SimpleLOFDetector utility for local outlier detection
- Add GeographicCentroidCalculator utility for centroid calculations
- Add comprehensive calculation DTOs (CalculationInfo, AccessPointInfo, etc.)
- Add UsageStatus enum for tracking AP filtering reasons

Repository Enhancements:
- Refactor WifiAccessPointRepositoryImpl with async batch operations
- Add cell tower lookup support with async operations
- Remove DynamoDBThrottlingException (handled by retry logic)
- Update DynamoDBConfig for cell tower table support

Algorithm Improvements:
- Enhance WifiPositioningCalculator with parallel algorithm execution
- Update TrilaterationAlgorithm with improved error handling
- Refine algorithm selection logic in AlgorithmSelector
- Update SelectionContext with comprehensive factor analysis

Service Layer:
- Refactor PositioningService to use WifiAccessPoints directly
- Remove PositioningServiceImpl (merged into PositioningService)
- Improve error handling and logging with structured logging
- Add comprehensive calculation info building

Controller Updates:
- Update PositioningController with async CompletableFuture support
- Enhance GlobalExceptionHandler with better error responses
- Add comprehensive integration test (WifiPositioningIntegrationTest)

Testing:
- Add comprehensive test data file